perf-tests/data/appprotect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appprotect-ingress
  annotations:
    appprotect.f5.com/app-protect-policy: "test-namespace/example-policy"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "test-namespace/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=<IP>:<PORT>"
spec:
  tls:
  - hosts:
    - appprotect.example.com
    secretName: appprotect-secret
  rules:
  - host: appprotect.example.com
    http:
      paths:
      - path: /backend1/v1
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
      - path: /backend2/v2
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
