perf-tests/data/non-ap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: non-ap-ingress
spec:
  tls:
  - hosts:
    - appprotect.example.com
    secretName: appprotect-secret
  rules:
  - host: appprotect.example.com
    http:
      paths:
      - path: /backend1
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
      - path: /backend2
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
